istio-lab/tasks-and-examples/reviews-weighted-routing/reviews-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        # Load balancing - 60/30/10
        - destination:
            host: reviews
            subset: v1
          weight: 60
        - destination:
            host: reviews
            subset: v2
          weight: 30
        - destination:
            host: reviews
            subset: v3
          weight: 10
