istio-lab/tasks-and-examples/reviews-weighted-routing/reviews-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
    - name: v1
      labels:
        version: v1
        app: reviews
    - name: v2
      labels:
        version: v2
        app: reviews
    - name: v3
      labels:
        version: v3
        app: reviews
